@@ -26,7 +26,7 @@ import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.levelgen.feature.configurations.FeatureConfiguration;
 import net.minecraft.world.level.levelgen.feature.stateproviders.BlockStateProvider;
 
-public record PathTagFeatureConfig(BlockStateProvider pathBlock, int radius, int noise, double multiplier, double minThresh, double maxThresh, boolean useY, boolean multiplyY, boolean is3D, boolean onlyExposed, TagKey<Block> replaceable) implements FeatureConfiguration {
+public record PathTagFeatureConfig(BlockStateProvider pathBlock, int radius, int noise, double multiplier, double minThresh, double maxThresh, boolean useY, boolean multiplyY, boolean is3D, boolean onlyExposed, TagKey<Block> replaceable, float chance) implements FeatureConfiguration {
 	public static final Codec<PathTagFeatureConfig> CODEC = RecordCodecBuilder.create((instance) -> instance.group(
 		BlockStateProvider.CODEC.fieldOf("block").forGetter((config) -> config.pathBlock),
 		Codec.intRange(1, 64).fieldOf("radius").orElse(10).forGetter((config) -> config.radius),
@@ -38,6 +38,7 @@ public record PathTagFeatureConfig(BlockStateProvider pathBlock, int radius, int
 		Codec.BOOL.fieldOf("multiplyY").orElse(false).forGetter((config) -> config.multiplyY),
 		Codec.BOOL.fieldOf("is3D").orElse(false).forGetter((config) -> config.is3D),
 		Codec.BOOL.fieldOf("onlyExposed").orElse(false).forGetter((config) -> config.onlyExposed),
-		TagKey.codec(Registries.BLOCK).fieldOf("replaceable").forGetter((config) -> config.replaceable)
+		TagKey.codec(Registries.BLOCK).fieldOf("replaceable").forGetter((config) -> config.replaceable),
+		Codec.floatRange(0, 1).fieldOf("chance").orElse(1F).forGetter((config) -> config.chance)
 	).apply(instance, PathTagFeatureConfig::new));
 }
