@@ -9,6 +9,7 @@ Put changelog here:
 - Converted feature configurations to records.
 - Added the Optimized Biome Tag Condition Source, allowing surface rules to utilize tags without causing lag.
     - Each time a server is loaded or a datapack is reloaded, all Optimized Biome Tag Condition Sources will iterate through the entries in their specified tag, and add them to a list.
-    - This means that the previous iteration using tags no longer need to iterate through the tag for every single block it checks, only needing to use a already-existing list, matching the performance of regular Biome Condition Sources.
+    - This means that the previous iteration using tags no longer needs to iterate through the tag for every single block it checks, only needing to use a already-existing list, matching the performance of regular Biome Condition Sources.
+- All path features now include a "chance" field in their configurations, denoting the chance for each block to place during generation.
 - Cleaned up and improved some mixins.
 - Some internal cleanup and annotation.
